# NNs-For-Computer-Vision

./: .gitignore  README  pyproject.toml  requirements.txt
notebooks/: training_and_evaluation.ipynb
src/semantic_segmentation/: data.py
