[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-package-name"
version = "0.1.0"
authors = [{name = "Amir Ali Hashemi", email = "aahashemi1380@gmail.com"}]
description = "Something cool here."
requires-python = ">=3.11"
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.ruff]
lint.select = ["I"]
line-length = 90
indent-width = 2

# Target Python 3.10
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

